sls-news with puppeteer PoC, linting, dependencies update

--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "lerna": "^3.1.4",
     "lint-staged": "^7.2.2",
     "prettier": "^1.14.2",
-    "tslint": "^5.11.0",
-    "tslint-config-prettier": "^1.15.0",
-    "typescript": "^3.0.1"
+    "tslint": "^5.12.1",
+    "tslint-config-prettier": "^1.17.0",
+    "typescript": "^3.2.4"
   },
   "scripts": {
     "build": "tsc -b ./packages",
@@ -30,7 +30,7 @@
     "test": "lerna run test --",
     "deploy": "lerna run deploy --",
     "lint": "tslint --fix --project ./packages/tsconfig.lint.json",
-    "prettier": "prettier --write --no-semi --single-quote",
+    "prettier": "prettier --write --single-quote packages/**/*.ts",
     "clean": "yarn run clean-dist && yarn run clean-output && yarn run clean-logs",
     "clean-incl-deps": "yarn run clean && yarn run clean-deps",
     "clean-output": "rm -fr output && rm -fr */**/output",
