--- a/packages/sls-news/serverless.yml
+++ b/packages/sls-news/serverless.yml
@@ -1,13 +1,16 @@
-service: org-random
+service: org-news
 
 plugins:
   - serverless-plugin-scripts
+  - serverless-offline
+  - serverless-plugin-chrome
 
 package:
   exclude:
     - ./**
     - '!dist/**'
     - '!node_modules/**'
+    - node_modules/puppeteer/.local-chromium/**
     
 provider:
   name: aws
@@ -25,8 +28,8 @@ provider:
     VERSION: ${{file(./package.json):version}}
 
   runtime: nodejs8.10
-  memorySize: 256
-  timeout: 3
+  memorySize: 768
+  timeout: 60
 
 custom:
   scripts:
@@ -34,8 +37,9 @@ custom:
       'before:deploy:createDeploymentArtifacts': yarn run build
 
 functions:
-
-  fetchRandomNumber:
-    handler: dist/index.fetchRandomNumber
+  fetchRandomNumber2:
+    handler: dist/index.hello
     events:
-      - http: GET number
+      - http:
+          path: /
+          method: get
