--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -2,7 +2,7 @@
   "compilerOptions": {
     "module": "commonjs",
     "target": "es2017",
-    "lib": ["es2017"],
+    "lib": ["dom", "es2017"],
     "moduleResolution": "node",
 
     "rootDir": ".",
@@ -13,8 +13,6 @@
     "typeRoots": ["./node_modules/@types", "./packages/types"],
 
     "composite": true,
-    "declaration": true,
-    "declarationMap": true,
     "sourceMap": true,
 
     "strict": true,
