cleanup, switch mocha to jest

--- a/packages/sls-news/tsconfig.json
+++ b/packages/sls-news/tsconfig.json
@@ -5,6 +5,5 @@
     "rootDir": "./src",
     "skipLibCheck": true
   },
-  "include": ["src"],
-  "references": [{ "path": "../random" }]
+  "include": ["src"]
 }
