--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     ]
   },
   "devDependencies": {
+    "@types/jest": "^24.0.11",
     "husky": "^1.0.0-rc.13",
+    "jest": "^24.7.1",
     "lerna": "^3.1.4",
-    "lint-staged": "^7.2.2",
+    "lint-staged": "^8.1.5",
     "prettier": "^1.14.2",
+    "ts-jest": "^24.0.1",
     "tslint": "^5.12.1",
     "tslint-config-prettier": "^1.17.0",
     "typescript": "^3.2.4"
