--- a/packages/sls-news/package.json
+++ b/packages/sls-news/package.json
@@ -11,12 +11,11 @@
   "private": true,
   "scripts": {
     "build": "tsc -b .",
-    "test": "mocha -r ts-node/register -r tsconfig-paths/register \"test/**/*.ts\"",
+    "test": "jest",
     "package": "serverless package",
     "deploy": "serverless deploy"
   },
   "dependencies": {
-    "@org/random": "^1.0.0",
     "@serverless-chrome/lambda": "^1.0.0-55",
     "aws-lambda": "^0.1.2",
     "chrome-launcher": "^0.10.5",
@@ -24,18 +23,16 @@
     "superagent": "^4.1.0"
   },
   "devDependencies": {
+    "@org/types": "^1.0.0",
     "@types/aws-lambda": "^8.10.11",
-    "@types/mocha": "^5.2.5",
     "@types/node": "^10.7.1",
     "@types/puppeteer": "^1.12.1",
     "@types/superagent": "^3.8.6",
     "chrome-launcher": "^0.10.5",
-    "mocha": "^5.2.0",
     "serverless": "^1.30.1",
     "serverless-offline": "4.5.0",
     "serverless-plugin-chrome": "^1.0.0-55",
     "serverless-plugin-scripts": "^1.0.2",
-    "ts-node": "^8.0.2",
     "tsconfig-paths": "^3.5.0",
     "typescript": "^3.2.4"
   }
