--- a/packages/tsconfig.json
+++ b/packages/tsconfig.json
@@ -1,4 +1,4 @@
 {
   "files": [],
-  "references": [{ "path": "./random" }, { "path": "./sls-random" }]
+  "references": [{ "path": "./sls-news" }]
 }
