--- a/packages/sls-tasker/serverless.yml
+++ b/packages/sls-tasker/serverless.yml
@@ -7,28 +7,28 @@ plugins:
 package:
   exclude:
     - ./**
-    - '!dist/**'
-    - '!node_modules/**'
-    
+    - "!dist/**"
+    - "!node_modules/**"
+
 provider:
   name: aws
   stage: ${{opt:stage, 'dev'}}
   region: ${{opt:region, 'eu-north-1'}}
 
   environment:
-    accountId: '#{AWS::AccountId}'
-    region: '#{AWS::Region}'
+    accountId: "#{AWS::AccountId}"
+    region: "#{AWS::Region}"
 
   iamRoleStatements:
     - Effect: "Allow"
       Resource: "*"
       Action:
         - "sns:*"
-  
+
   # use ${{}} to access serverless variables
   # this is necessary because cloudformation uses ${} syntax
   variableSyntax: "\\${{([ ~:a-zA-Z0-9._\\'\",\\-\\/\\(\\)]+?)}}"
-      
+
   stackTags:
     SERVICE: ${{self:service}}
     STAGE: ${{self:provider.stage}}
@@ -42,7 +42,7 @@ provider:
 custom:
   scripts:
     hooks:
-      'before:deploy:createDeploymentArtifacts': yarn run build
+      "before:deploy:createDeploymentArtifacts": yarn run build
 
 functions:
   publish-tasks:
