--- a/packages/sls-news/package.json
+++ b/packages/sls-news/package.json
@@ -16,18 +16,22 @@
     "deploy": "serverless deploy"
   },
   "dependencies": {
+    "@org/types": "^1.0.0",
     "@serverless-chrome/lambda": "^1.0.0-55",
     "aws-lambda": "^0.1.2",
+    "aws-sdk": "^2.437.0",
     "chrome-launcher": "^0.10.5",
     "puppeteer": "^1.12.2",
+    "serverless-pseudo-parameters": "^2.4.0",
     "superagent": "^4.1.0"
   },
   "devDependencies": {
-    "@org/types": "^1.0.0",
+    "@org/types-external": "^1.0.0",
     "@types/aws-lambda": "^8.10.11",
     "@types/node": "^10.7.1",
     "@types/puppeteer": "^1.12.1",
     "@types/superagent": "^3.8.6",
+    "aws-sdk-mock": "^4.4.0",
     "chrome-launcher": "^0.10.5",
     "serverless": "^1.30.1",
     "serverless-offline": "4.5.0",
