--- a/packages/types/tsconfig.json
+++ b/packages/types/tsconfig.json
@@ -1,3 +1,8 @@
 {
-  "extends": "../../tsconfig.settings.json"
+  "extends": "../../tsconfig.settings.json",
+  "compilerOptions": {
+    "outDir": "./dist",
+    "rootDir": "./src"
+  },
+  "include": ["src"]
 }
