--- a/tsconfig.settings.json
+++ b/tsconfig.settings.json
@@ -10,7 +10,7 @@
     "paths": {
       "@org/*": ["./*/src"]
     },
-    "typeRoots": ["./node_modules/@types", "./packages/types"],
+    "typeRoots": ["./node_modules/@types", "./packages/types-external"],
 
     "composite": true,
     "sourceMap": true,
