chrome-client refactor, make fetch news handler thin

--- a/packages/sls-news/serverless.yml
+++ b/packages/sls-news/serverless.yml
@@ -49,7 +49,7 @@ custom:
 
 functions:
   fetch-news:
-    handler: dist/index.hello
+    handler: dist/index.fetchNewsHandler
     events:
       - sns: fetch-news
       # - http:
