--- a/packages/sls-news/package.json
+++ b/packages/sls-news/package.json
@@ -16,7 +16,7 @@
     "deploy": "serverless deploy"
   },
   "dependencies": {
-    "@org/types": "^1.0.0",
+    "@org/sls-news-types": "^1.0.0",
     "@serverless-chrome/lambda": "^1.0.0-55",
     "aws-lambda": "^0.1.2",
     "aws-sdk": "^2.437.0",
